--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <h1> Pokedex </h1>
+    <ul class = "pokedex-list"></ul>
     <!--js script for pokedex listing here-->
     <section><script src="js/scripts.js"></script></section>
   </body>
