Removed section from body

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <h1> Pokedex </h1>
-    <ul class = "pokedex-list"></ul>
+    <ul class = "pokemon-list"></ul>
     <!--js script for pokedex listing here-->
-    <section><script src="js/scripts.js"></script></section>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
