adding script src for promise-polyfill file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <body>
     <h1> Pokedex </h1>
     <ul class = "pokemon-list"></ul>
+    <!--js script for promise polyfille-->
+    <script src="js/promise-polyfill.js"></script>
     <!--js script for pokedex listing here-->
     <script src="js/scripts.js"></script>
   </body>
