added script src for fetch polyfill

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <ul class = "pokemon-list"></ul>
     <!--js script for promise polyfille-->
     <script src="js/promise-polyfill.js"></script>
+    <!--js script for fetch polyfill-->
+    <script src="js/fetch.umd"></script>
     <!--js script for pokedex listing here-->
     <script src="js/scripts.js"></script>
   </body>
