updated script src for fetch.js file and added div as parent to h1 and ul

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1> Pokedex </h1>
-    <ul class = "pokemon-list"></ul>
+    <div>
+      <h1> Pokedex </h1>
+      <ul class = "pokemon-list"></ul>
+    </div>
     <!--js script for promise polyfille-->
     <script src="js/promise-polyfill.js"></script>
     <!--js script for fetch polyfill-->
-    <script src="js/fetch.umd"></script>
+    <script src="js/fetch.js"></script>
     <!--js script for pokedex listing here-->
     <script src="js/scripts.js"></script>
   </body>
