added div for modal container

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div>
+      <div id = 'modal-container'></div>
       <h1> Pokedex </h1>
       <ul class = "pokemon-list"></ul>
     </div>
