removed extra code and updated formatting

--- a/index.html
+++ b/index.html
@@ -7,19 +7,11 @@
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-    crossorigin="anonymous"
-  />
+    crossorigin="anonymous"/>
   <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap"
-  />
-  <link rel="stylesheet" type="text/css" href="./css/styles.css" />
-  <link
-    rel="shortcut icon"
-    type="image"
-    href="./img/pikachu_icon-icons.com_67535.svg"
-    sizes="32x32"
-  />
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap"/>
+  <link rel="stylesheet" type="text/css" href="./css/styles.css"/>
 </head>
 
 <body>
@@ -30,8 +22,7 @@
         src="#"
         class="d-inline-block align-top"
         height="60"
-        alt="Pokemon Logo"
-      />
+        alt="Pokemon Logo"/>
     </a>
     <button
       class="navbar-toggler"
@@ -40,8 +31,7 @@
       data-target="#navbarTogglerDemo01"
       aria-controls="navbarTogglerDemo01"
       aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
@@ -79,8 +69,7 @@
             type="button"
             class="close"
             data-dismiss="modal"
-            aria-label="Close"
-          >
+            aria-label="Close">
             <span aria-hidden="true">×</span>
           </button>
         </div>
@@ -91,8 +80,7 @@
           <button
             type="button"
             class="btn btn-secondary"
-            data-dismiss="modal"
-          >
+            data-dismiss="modal">
             Close
           </button>
         </div>
