Changed nav link text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="#">More Pokemon</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About the Creator</a>
+          <a class="nav-link" href="#">Developer</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
