--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!--Navigation -->
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-md navbar-primary bg-dark fixed-top">
     <a class="navbar-brand" href="#">
       <img
         src="#"
