--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
   <!--Navigation -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="https://www.pokemon.com/us/" target="blank">
       <img
-        src="#"
+        src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pok%C3%A9mon_logo.svg"
         class="d-inline-block align-top"
         height="60"
         alt="Pokemon Logo"/>
@@ -86,7 +86,7 @@
       </div>
     </div>
   </div>
-
+<footer><a href="https://commons.wikimedia.org/wiki/File:International_Pok%C3%A9mon_logo.svg" target="blank">Nintendo, Creatures, Game Freak, en:The Pokémon Company</a>, Public domain, via Wikimedia Commons</footer>
     <!--Bootstrap JS start -->
     <script
 			  src="https://code.jquery.com/jquery-3.3.1.min.js"
