--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous"/>
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./css/styles.css"/>
 </head>
 
@@ -36,10 +36,10 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">More Pokemon</a>
+          <a class="nav-link" href="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pok%C3%A9mon_logo.svg" target="blank">More Pokemon</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Developer</a>
+          <a class="nav-link" href="https://sarahschuller.github.io/portfolio-website/" target="blank">Developer</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
@@ -58,8 +58,7 @@
     tabindex="-1"
     role="dialog"
     aria-labelledby="exampleModalLiveLabel"
-    aria-hidden="true"
-  >
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -78,7 +77,7 @@
         <div class="modal-footer">
           <button
             type="button"
-            class="btn btn-secondary"
+            class="btn btn-dark"
             data-dismiss="modal">
             Close
           </button>
@@ -86,6 +85,11 @@
       </div>
     </div>
   </div>
+<div>
+   <button onclick="topFunction()" id="myBtn" title="Go to top">
+     Top
+   </button>
+</div>
 <footer><a href="https://commons.wikimedia.org/wiki/File:International_Pok%C3%A9mon_logo.svg" target="blank">Nintendo, Creatures, Game Freak, en:The Pokémon Company</a>, Public domain, via Wikimedia Commons</footer>
     <!--Bootstrap JS start -->
     <script
