--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
+      <form class="search-pokemon form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" id="myInput" type="text" placeholder="Search Pokemon..." aria-label="Search" onfocus="this.value=''">
+            <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search
+            </button>
+      </form>
     </div>
   </nav>
 
