--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </ul>
       <form class="search-pokemon form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" id="myInput" type="text" placeholder="Search Pokemon..." aria-label="Search" onfocus="this.value=''">
-            <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search
+            <button class="btn btn-dark my-2 my-sm-0" type="submit">Search
             </button>
       </form>
     </div>
