--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <!--Navigation -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-    <a class="navbar-brand" href="https://www.pokemon.com/us/" target="blank">
+    <a class="navbar-brand" href="index.html" target="blank">
       <img
         src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pok%C3%A9mon_logo.svg"
         class="d-inline-block align-top"
