changed nav bar link src and text

--- a/index.html
+++ b/index.html
@@ -36,13 +36,10 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pok%C3%A9mon_logo.svg" target="blank">More Pokemon</a>
+          <a class="nav-link" href="http://www.pokemon.com" target="blank">Pokemon Official</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://sarahschuller.github.io/portfolio-website/" target="blank">Developer</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
       <form class="search-pokemon form-inline my-2 my-lg-0">
